{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 1498,
  "lineage": "065c10b3-6fb8-3c6d-ce0a-317f5b7d9464",
  "resources": [
    {
      "module": "module.associacao_privada",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associacao-subnet-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000ce59423c3b5f22",
            "route_table_id": "rtb-09a2fa19702a57b12",
            "subnet_id": "subnet-0402295bd97d393a1"
          },
          "dependencies": [
            "module.subnet_privada.aws_subnet.subnet",
            "module.tabela_rota_privada.aws_route_table.route_table",
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.associacao_publica",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associacao-subnet-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc5b032c377787f1",
            "route_table_id": "rtb-098c6f22b6a2b5695",
            "subnet_id": "subnet-0538ce7e6a1154d7c"
          },
          "dependencies": [
            "module.subnet_publica.aws_subnet.subnet",
            "module.tabela_rota_publica.aws_route_table.route_table",
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_banco",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:731958267068:instance/i-0941e6dc47f72946f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0941e6dc47f72946f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i3.large",
            "ipv6_address_count": 0,
            "key_name": "ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0118beab1b9226b22",
            "private_dns": "ip-10-0-0-228.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0093b2d7309457f1d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0402295bd97d393a1",
            "tags": {
              "Name": "ec2_privada_banco_iac"
            },
            "tags_all": {
              "Name": "ec2_privada_banco_iac"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-075bb07ef14eecb8b"
            ]
          },
          "dependencies": [
            "module.key_par.aws_key_pair.ssh",
            "module.sg_banco.aws_security_group.sg",
            "module.subnet_privada.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_privada",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:731958267068:instance/i-0a9499f5ba89b60a4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9499f5ba89b60a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i3.large",
            "ipv6_address_count": 0,
            "key_name": "ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01288c106d2d34171",
            "private_dns": "ip-10-0-0-175.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02bceb7fb65aa2660",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0402295bd97d393a1",
            "tags": {
              "Name": "ec2_privada_iac"
            },
            "tags_all": {
              "Name": "ec2_privada_iac"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ffda173a741260f9"
            ]
          },
          "dependencies": [
            "module.ec2_banco.aws_instance.ec2",
            "module.key_par.aws_key_pair.ssh",
            "module.sg_banco.aws_security_group.sg",
            "module.sg_privado.aws_security_group.sg",
            "module.subnet_privada.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_privada_2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:731958267068:instance/i-0c9f79284164383ff",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9f79284164383ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i3.large",
            "ipv6_address_count": 0,
            "key_name": "ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0066c630b15c095f5",
            "private_dns": "ip-10-0-0-142.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f889f3650f8c1d95",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0402295bd97d393a1",
            "tags": {
              "Name": "ec2_privada_iac_2"
            },
            "tags_all": {
              "Name": "ec2_privada_iac_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ffda173a741260f9"
            ]
          },
          "dependencies": [
            "module.ec2_banco.aws_instance.ec2",
            "module.key_par.aws_key_pair.ssh",
            "module.sg_banco.aws_security_group.sg",
            "module.sg_privado.aws_security_group.sg",
            "module.subnet_privada.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_publica",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:731958267068:instance/i-0f334527bb6ed2d34",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f334527bb6ed2d34",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "i3.large",
            "ipv6_address_count": 0,
            "key_name": "ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05bdb396a601247d7",
            "private_dns": "ip-10-0-0-48.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0034bc24a54fcad0e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0538ce7e6a1154d7c",
            "tags": {
              "Name": "ec2_publica_iac"
            },
            "tags_all": {
              "Name": "ec2_publica_iac"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01c7196681d52fb2c"
            ]
          },
          "dependencies": [
            "module.ec2_banco.aws_instance.ec2",
            "module.ec2_privada.aws_instance.ec2",
            "module.key_par.aws_key_pair.ssh",
            "module.sg_banco.aws_security_group.sg",
            "module.sg_privado.aws_security_group.sg",
            "module.sg_publico.aws_security_group.sg",
            "module.subnet_privada.aws_subnet.subnet",
            "module.subnet_publica.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_ip_ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6a75525b8b142f6",
            "arn": "arn:aws:ec2:us-east-1:731958267068:elastic-ip/eipalloc-0a6a75525b8b142f6",
            "association_id": "eipassoc-041b9584ba0c9c33a",
            "domain": "vpc",
            "id": "eipalloc-0a6a75525b8b142f6",
            "instance": "i-0f334527bb6ed2d34",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05bdb396a601247d7",
            "private_dns": "ip-10-0-0-48.ec2.internal",
            "private_ip": "10.0.0.48",
            "public_dns": "ec2-44-207-112-169.compute-1.amazonaws.com",
            "public_ip": "44.207.112.169",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ip_ec2"
            },
            "tags_all": {
              "Name": "ip_ec2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2_banco.aws_instance.ec2",
            "module.ec2_privada.aws_instance.ec2",
            "module.ec2_publica.aws_instance.ec2",
            "module.key_par.aws_key_pair.ssh",
            "module.sg_banco.aws_security_group.sg",
            "module.sg_privado.aws_security_group.sg",
            "module.sg_publico.aws_security_group.sg",
            "module.subnet_privada.aws_subnet.subnet",
            "module.subnet_publica.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_ip_ng",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f1d6a44af8553c6",
            "arn": "arn:aws:ec2:us-east-1:731958267068:elastic-ip/eipalloc-09f1d6a44af8553c6",
            "domain": "vpc",
            "id": "eipalloc-09f1d6a44af8553c6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-232-123-172.compute-1.amazonaws.com",
            "public_ip": "3.232.123.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ip_nat_gateway"
            },
            "tags_all": {
              "Name": "ip_nat_gateway"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731958267068:internet-gateway/igw-0114d341f2e9bed14",
            "id": "igw-0114d341f2e9bed14",
            "owner_id": "731958267068",
            "tags": {
              "Iac": "true",
              "Name": "gateway-internet-carona-iac"
            },
            "tags_all": {
              "Iac": "true",
              "Name": "gateway-internet-carona-iac"
            },
            "vpc_id": "vpc-0b7b340919de0d712"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f1d6a44af8553c6",
            "association_id": "eipassoc-0c7b20ce65b5bab55",
            "connectivity_type": "public",
            "id": "nat-00af050312cf336a2",
            "network_interface_id": "eni-0c580a189a9a82bdd",
            "private_ip": "10.0.0.88",
            "public_ip": "3.232.123.172",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0538ce7e6a1154d7c",
            "tags": {
              "Name": "ng-iac"
            },
            "tags_all": {
              "Name": "ng-iac"
            }
          },
          "dependencies": [
            "module.elastic_ip_ng.aws_eip.ip-nat",
            "module.subnet_publica.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.rota_privada",
      "mode": "managed",
      "type": "aws_route",
      "name": "rota",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09a2fa19702a57b121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00af050312cf336a2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a2fa19702a57b12",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic_ip_ng.aws_eip.ip-nat",
            "module.nat_gateway.aws_nat_gateway.ng",
            "module.subnet_publica.aws_subnet.subnet",
            "module.tabela_rota_privada.aws_route_table.route_table",
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.rota_publica",
      "mode": "managed",
      "type": "aws_route",
      "name": "rota",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0114d341f2e9bed14",
            "id": "r-rtb-098c6f22b6a2b56951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-098c6f22b6a2b5695",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.internet_gateway",
            "module.tabela_rota_publica.aws_route_table.route_table",
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.sg_banco",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731958267068:security-group/sg-075bb07ef14eecb8b",
            "description": "security group para ec2 do banco",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075bb07ef14eecb8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/25"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.128/25"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.128/25"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "sg_banco",
            "name_prefix": "",
            "owner_id": "731958267068",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_security_group_banco"
            },
            "tags_all": {
              "Name": "private_security_group_banco"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7b340919de0d712"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.sg_privado",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731958267068:security-group/sg-0ffda173a741260f9",
            "description": "security group para ec2 privada",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffda173a741260f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_privado",
            "name_prefix": "",
            "owner_id": "731958267068",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_security_group"
            },
            "tags_all": {
              "Name": "private_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7b340919de0d712"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.sg_publico",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731958267068:security-group/sg-01c7196681d52fb2c",
            "description": "security group para ec2 publica",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c7196681d52fb2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_publico",
            "name_prefix": "",
            "owner_id": "731958267068",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_security_group"
            },
            "tags_all": {
              "Name": "public_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7b340919de0d712"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_privada",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731958267068:subnet/subnet-0402295bd97d393a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0402295bd97d393a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731958267068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_privada_iac"
            },
            "tags_all": {
              "Name": "subnet_privada_iac"
            },
            "vpc_id": "vpc-0b7b340919de0d712"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_publica",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731958267068:subnet/subnet-0538ce7e6a1154d7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0538ce7e6a1154d7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731958267068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_publica_iac"
            },
            "tags_all": {
              "Name": "subnet_publica_iac"
            },
            "vpc_id": "vpc-0b7b340919de0d712"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.tabela_rota_privada",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731958267068:route-table/rtb-09a2fa19702a57b12",
            "id": "rtb-09a2fa19702a57b12",
            "owner_id": "731958267068",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route_table_privada_iac"
            },
            "tags_all": {
              "Name": "route_table_privada_iac"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7b340919de0d712"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.tabela_rota_publica",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731958267068:route-table/rtb-098c6f22b6a2b5695",
            "id": "rtb-098c6f22b6a2b5695",
            "owner_id": "731958267068",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route_table_publica_iac"
            },
            "tags_all": {
              "Name": "route_table_publica_iac"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7b340919de0d712"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_carona"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_carona",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731958267068:vpc/vpc-0b7b340919de0d712",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-05459b136433004df",
            "default_route_table_id": "rtb-0ace2a363b1729286",
            "default_security_group_id": "sg-0bee2c6ca3b23668c",
            "dhcp_options_id": "dopt-0b88cc19fba8d9e9b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b7b340919de0d712",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ace2a363b1729286",
            "owner_id": "731958267068",
            "tags": {
              "Name": "vpc-carona-iac"
            },
            "tags_all": {
              "Name": "vpc-carona-iac"
            }
          }
        }
      ]
    }
  ]
}